tests/suite/fail/generated/borrow/fail_move_store_data.ny
fn store(x: string) -> void { print(x) }
fn main() {
    let data = "hello"
    store(data)
    print(data) //~ ERROR was moved
}
